Fixed Alignment of Cards

--- a/client/src/components/LandingPage/css/AniCard.css
+++ b/client/src/components/LandingPage/css/AniCard.css
@@ -1,4 +1,16 @@
 .makeStyles-root-6 {
     max-width: 345px;
-    height: 50vh!important;
+    height: 53vh!important;
+}
+@media(max-height:756px)
+{
+    .makeStyles-root-6 {
+        height: 57vh!important;
+    }
+}
+@media(max-height:513px)
+{
+    .makeStyles-root-6 {
+        height: 64vh!important;
+    }
 }
